# openbot

./: README.md  SPEC.md  pyproject.toml  test_basic.py  test_mode_d_and_tester.py
.openbot/: config.json
.openbot/workspace/: openbot.db  openbot.db-shm  openbot.db-wal
.openbot/workspace/go_calculator_project/: calculator.go  calculator_test.go  go.mod
.openbot/workspace/my_python_project/: README.md  pyproject.toml
.openbot/workspace/my_python_project/my_module/: __init__.py  calculator.py
.openbot/workspace/my_python_project/my_module.egg-info/: PKG-INFO  SOURCES.txt
.openbot/workspace/my_python_project/tests/: test_calculator.py
.openbot/workspace/sessions/: cli_direct.jsonl
docs/: api.md  architecture.md  examples.md
openbot/: __init__.py
openbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
openbot/agent/: context.py  loop.py  memory.py  tester.py
openbot/bus/: __init__.py  events.py  queue.py
openbot/cli/: commands.py
openbot/config/: __init__.py  loader.py  schema.py
openbot/infra/: capability_registry.py  context_manager.py  database.py  log_service.py  skill_executor.py  template_registry.py  test_case_store.py  workflow_executor.py
openbot/providers/: __init__.py  litellm_provider.py  registry.py
openbot/schemas/: __init__.py  audit_report.py  execution_trace.py  failure_experience.py  plan_spec.py  test_case_spec.py  workflow_spec.py
openbot/session/: __init__.py  manager.py
tests/: __init__.py  test_auditor_agent.py  test_exec_agent.py  test_integration.py  test_performance.py  test_planner_agent.py
(+21 files in other folders)
