[project]
name = "openbot"
version = "0.1.0"
description = "A single-agent, auditable AI assistant with workflows and tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "qq-botpy>=1.0.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "httpx>=0.25.0",
    "readability-lxml>=0.8.0",
    "mcp>=1.0.0",
    "json-repair>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
openbot = "openbot.cli.commands:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

